--- a/plant-list-app/src/app/app.component.html
+++ b/plant-list-app/src/app/app.component.html
@@ -1,5 +1,12 @@
 <app-header></app-header>
 <div class="container">
-    <app-plant-form></app-plant-form>
-    <app-plant-detail class='plant-card' *ngFor="let plant of plantList$ | async" [plant]="plant"></app-plant-detail>
+  <app-plant-form></app-plant-form>
+  <div class="plant-card-container">
+    <app-plant-detail
+      class="plant-card"
+      *ngFor="let plant of plantList$ | async"
+      [plant]="plant"
+      (deletePlant)="deletePlant($event)"
+    ></app-plant-detail>
+  </div>
 </div>
