--- a/plant-list-app/src/app/shared/Components/plant-form/plant-form.component.html
+++ b/plant-list-app/src/app/shared/Components/plant-form/plant-form.component.html
@@ -4,6 +4,10 @@
         <input type="text" formControlName="name">
     </label>
     <label >
+        Image
+        <input type="text" formControlName="imageUrl">
+    </label>
+    <label >
         Type
         <input type="text" formControlName="type">
     </label>
