--- a/plant-list-app/src/app/core/components/header/header.component.html
+++ b/plant-list-app/src/app/core/components/header/header.component.html
@@ -20,9 +20,10 @@
     <div class="header_information__texte">
       <h1>Les <span>plantes</span> rendent la vie meilleure</h1>
       <p>
-        Les plantes réduisent le stress et améliore l'humeur. Elle sont donc
-        idéal à la maison
+        Les plantes réduisent le stress et améliorent l'humeur. Elle sont donc
+        idéales à la maison
       </p>
+      <button>En Savoir Plus</button>
     </div>
     <div class="header_information__image">
       <img src="../../../../assets/images/Bocal.png" alt="" />
