--- a/plant-list-app/src/app/core/components/header/header.component.scss
+++ b/plant-list-app/src/app/core/components/header/header.component.scss
@@ -54,7 +54,7 @@ header {
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-  padding: 60px;
+  padding: 30px 60px;
 //   margin: 20px 0px;
   width: 100%;
 
@@ -79,6 +79,24 @@ header {
       font-size: 30px;
       color: #8aa6a3;
       line-height: 40px;
+    }
+
+    button{
+      padding: 15px;
+      border: none;
+      background-color: #127369;
+      color: #8aa6a3;
+      margin-top: 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      font-weight: 700;
+      font-size: 20px;
+
+      &:hover{
+        background-color: #8aa6a3;
+        color: #127369;
+        
+      }
     }
   }
 }
