--- a/plant-list-app/src/app/core/components/header/header.component.html
+++ b/plant-list-app/src/app/core/components/header/header.component.html
@@ -15,6 +15,7 @@
         <li><a routerLink="">Se Connecter</a></li>
       </ul>
     </nav>
+    <mat-icon>menu</mat-icon>
   </div>
   <div class="header_information">
     <div class="header_information__texte">
