--- a/plant-list-app/src/app/plant/Components/plant-detail/plant-detail.component.scss
+++ b/plant-list-app/src/app/plant/Components/plant-detail/plant-detail.component.scss
@@ -4,10 +4,19 @@
   position: relative;
   cursor: pointer;
   border-radius: 5px;
+
+
+
+
 .image{
   width: 250px;
   height: 250px;
   margin-bottom: 10px;
+
+  @media screen and (max-width:768px) {
+   width: 100%;
+   height: 100%;
+  }
 }
 img {
   border-radius: 5px;
@@ -19,6 +28,11 @@ img {
   &__info {
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width:768px) {
+      align-items: center;
+      
+    }
 
     h2 {
       color: #10403b;
