--- a/plant-list-app/src/app/plant/Components/plant-info/plant-info.component.scss
+++ b/plant-list-app/src/app/plant/Components/plant-info/plant-info.component.scss
@@ -18,9 +18,21 @@
   margin: 0 auto;
   height: 400px;
 
+  @media screen and (max-width:768px) {
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+     
+   }
   &__image {
     width: 400px;
     height: 400px;
+    @media screen and (max-width:768px) {
+      
+      height: auto;
+      width: 100%;
+       
+     }
 
     img {
       width: 100%;
@@ -43,6 +55,10 @@
   margin-top: 20px;
   display: flex;
 
+  @media screen and (max-width:768px) {
+   display: block;
+    
+    }
   button {
     margin-right: 20px;
     padding: 10px;
@@ -50,6 +66,12 @@
     border-radius: 5px;
     background-color: #10403b;
     color: white;
+
+    @media screen and (max-width:768px) {
+      display: inline-block;
+      margin-bottom: 10px;
+      width: 100%;
+      }
 
     &:hover {
       background-color: #8aa6a3;
