--- a/plant-list-app/src/app/plant/Components/plant-list/plant-list.component.scss
+++ b/plant-list-app/src/app/plant/Components/plant-list/plant-list.component.scss
@@ -1,5 +1,13 @@
 .plant-card-container{
     display: flex;
+    flex-wrap: wrap;
+
+    @media screen and (max-width:768px) {
+        flex-direction: column; 
+        align-items: center;
+      }
+
+   
 }
 
 
