--- a/plant-list-app/src/app/core/components/header/header.component.html
+++ b/plant-list-app/src/app/core/components/header/header.component.html
@@ -22,7 +22,7 @@
       <h1>Les <span>plantes</span> rendent la vie meilleure</h1>
       <p>
         Les plantes réduisent le stress et améliorent l'humeur. Elle sont donc
-        idéales à la maison
+        idéales à la maison.
       </p>
       <button>En Savoir Plus</button>
     </div>
